chore: Config 수정 및 기존 로직 변경